--- a/wave-defender/index.html
+++ b/wave-defender/index.html
@@ -2,6 +2,7 @@
 
 <body>
     <canvas id="game"></canvas>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <script type="module" src="index.js"> </script>
     <style type="text/css">
         html,
