--- a/wave-defender/index.html
+++ b/wave-defender/index.html
@@ -1,18 +1,15 @@
 <html>
-
-<body>
-    <canvas id="game"></canvas>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <script type="module" src="index.js"> </script>
-    <style type="text/css">
-        html,
-        body {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-        }
-    </style>
-</body>
-
+    <body>
+        <canvas id="game"></canvas>
+        <script type="module" src="./index.js"></script>
+        <style type="text/css">
+            html,
+            body {
+                margin: 0;
+                padding: 0;
+                width: 100%;
+                height: 100%;
+            }
+        </style>
+    </body>
 </html>
