--- a/gameoflife/index.html
+++ b/gameoflife/index.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <canvas id="game"></canvas>
-        <script type="module" src="./index.js"></script>
+        <script src="./index.js"></script>
         <style type="text/css">
             html,
             body {
